# Gateway

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  RELEASING.md  ROADMAP.md  docker-bake.json  justfile  tarpaulin-report.html  tarpaulin-report.json
.github/: setup-workspace.sh  update-homebrew-formula.py
.github/workflows/: ci.yml  release.yml
benches/: acl_parse.rs  middleware_pipeline.rs  routing.rs
deploy/: Dockerfile
deploy/helm/a3s-gateway/: Chart.yaml  values.yaml
deploy/helm/a3s-gateway/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: soak-wire.sh
src/: dashboard.rs  entrypoint.rs  error.rs  gateway.rs  lib.rs  main.rs  managed_snapshot.rs  wire.rs
src/agent/: affinity.rs  channel.rs  health_probe.rs  mod.rs  privacy_router.rs  request_priority.rs  token_meter.rs
src/config/: acl.rs  entrypoint.rs  inference.rs  middleware.rs  mod.rs  mode.rs  router.rs  scaling.rs  service.rs  usage.rs
src/config/acl/: inference.rs
src/config/inference/: tests.rs  validation.rs
src/dashboard/: managed.rs  tests.rs
src/entrypoint/: inference_dispatch.rs  inference_fallback_tests.rs  inference_identity_tests.rs  inference_tests.rs  inference_usage_tests.rs  listener.rs  native_response.rs  tests.rs  udp_listener.rs
src/entrypoint/protocol/: grpc_handler.rs  http_handler.rs  mod.rs  streaming_handler.rs  ws_handler.rs
src/gateway/: autoscaling.rs  builders.rs  mode_tests.rs  startup.rs  tests.rs
src/inference/: access_error.rs  authorization.rs  identity.rs  limits.rs  mod.rs  openai_request.rs
src/managed_snapshot/: persistence.rs  tests.rs
src/middleware/: auth.rs  body_limit.rs  circuit_breaker.rs  compress.rs  cors.rs  forward_auth.rs  headers.rs  ip_allow.rs  ip_matcher.rs  jwt_auth.rs  mod.rs  rate_limit.rs  rate_limit_redis.rs  retry.rs  strip_prefix.rs  tcp_filter.rs
src/observability/: access_log.rs  metrics.rs  mod.rs  tracing.rs
src/observability/metrics/: prometheus.rs  telemetry.rs  telemetry_tests.rs  tests.rs
src/observability/metrics/telemetry/: prometheus.rs
src/provider/: discovery.rs  dns.rs  docker.rs  file_watcher.rs  kubernetes.rs  kubernetes_crd.rs  kubernetes_tests.rs  mod.rs
src/proxy/: acme.rs  acme_account.rs  acme_client.rs  acme_csr.rs  acme_dns.rs  acme_manager.rs  acme_types.rs  grpc.rs  http_proxy.rs  mod.rs  streaming.rs  tcp.rs  tls.rs  udp.rs  websocket.rs  ws_mux.rs
src/router/: mod.rs  rule.rs  tcp.rs
src/scaling/: autoscaler.rs  buffer.rs  concurrency.rs  executor.rs  kubernetes_executor.rs  mod.rs  revision.rs  rollout.rs
src/service/: failover.rs  health_check.rs  load_balancer.rs  mirror.rs  mod.rs  passive_health.rs  sticky.rs
src/usage/: lifecycle.rs  mod.rs  persistence.rs  spool.rs  tests.rs
tests/: cli.rs  graceful_drain.rs  integration.rs  kubernetes_scaling_recovery.rs  managed_listener_reload.rs  managed_protocol_recovery.rs  managed_replica_readiness.rs  managed_snapshot.rs  telemetry.rs
tests/fixtures/: cloud-route-snapshot.acl
tests/fixtures/tls/: README.md  revision-1-ca.crt  revision-1.crt  revision-1.key  revision-2-ca.crt  revision-2.crt  revision-2.key
tests/openai_sdk/: README.md  fake_backend.py  harness.py  requirements.txt  test_conformance.py
